cadastro/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: cadastro
  # annotations:
  #   cloud.google.com/backend-config: '{"default": "cadastro"}'
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: cadastro
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cadastro
  labels:
    app: cadastro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cadastro
  template:
    metadata:
      labels:
        namespace: default
        app: cadastro
    spec:
      serviceAccountName: cadastro-service-account
      containers:
        - image: gcr.io/cearaprev-sgeap-prod/cadastro:latest
          name: cadastro
          ports:
            - containerPort: 8080
              name: cadastro
              protocol: TCP
          resources:
          # You must specify requests for CPU to autoscale
          # based on CPU utilization
            requests:
              cpu: "1"
        - name: cloud-sql-proxy
          # It is recommended to use the latest version of the Cloud SQL proxy
          # Make sure to update on a regular schedule!
          image: us.gcr.io/cloudsql-docker/gce-proxy:1.27.0
          command:
            - "/cloud_sql_proxy"

            # If connecting from a VPC-native GKE cluster, you can use the
            # following flag to have the proxy connect over private IP
            - "-ip_address_types=PRIVATE"

            # Replace DB_PORT with the port the proxy should listen on
            # Defaults: MySQL: 3306, Postgres: 5432, SQLServer: 1433
            - "-instances=cearaprev-sgeap-prod:southamerica-east1:cearaprev-sgeap-prod-db=tcp:5432"
          securityContext:
            # The default Cloud SQL proxy image runs as the
            # "nonroot" user and group (uid: 65532) by default.
            runAsNonRoot: true
          # Resource configuration depends on an application's requirements. You
          # should adjust the following values based on what your application
          # needs. For details, see https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
          resources:
            requests:
              # The proxy's memory use scales linearly with the number of active
              # connections. Fewer open connections will use less memory. Adjust
              # this value based on your application's requirements.
              memory: "1Gi"
              # The proxy's CPU use scales linearly with the amount of IO between
              # the database and the application. Adjust this value based on your
              # application's requirements.
              cpu:    "0.5"
