cadastro/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cadastro
  annotations:
    cloud.google.com/backend-config: '{"default": "cadastro"}'
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: cadastro
  type: NodePort
